--- a/MenuForFood/Base.lproj/Main.storyboard
+++ b/MenuForFood/Base.lproj/Main.storyboard
@@ -21,10 +21,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9kC-zz-bv5">
-                                <rect key="frame" x="0.0" y="262" width="375" height="405"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QpQ-H1-Pif">
                                 <rect key="frame" x="0.0" y="62" width="375" height="200"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -36,7 +32,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="P4n-wd-pJB" id="5Ot-8w-TCL">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sP0-7Q-JGA">
@@ -57,9 +53,13 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9kC-zz-bv5">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5h1-JI-4RZ">
-                                <rect key="frame" x="20" y="20" width="50" height="30"/>
-                                <color key="backgroundColor" red="0.44373146400000002" green="0.79648042929999996" blue="0.41166371210000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="0.0" y="20" width="50" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.59374900889284321" blue="0.19986438218102376" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="R8Z-h3-ScB"/>
                                 </constraints>
@@ -73,18 +73,19 @@
                         <constraints>
                             <constraint firstItem="5h1-JI-4RZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="3NT-Xh-Fsd"/>
                             <constraint firstItem="QpQ-H1-Pif" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Ryc-G4-5eZ"/>
-                            <constraint firstItem="5h1-JI-4RZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="TnE-OE-pbb"/>
+                            <constraint firstItem="5h1-JI-4RZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="TnE-OE-pbb"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9kC-zz-bv5" secondAttribute="bottom" id="UEd-oN-I7G"/>
                             <constraint firstAttribute="trailing" secondItem="QpQ-H1-Pif" secondAttribute="trailing" id="WMY-DN-ZVj"/>
-                            <constraint firstItem="9kC-zz-bv5" firstAttribute="top" secondItem="QpQ-H1-Pif" secondAttribute="bottom" id="bMM-cK-eyu"/>
+                            <constraint firstAttribute="width" secondItem="9kC-zz-bv5" secondAttribute="width" id="WfB-gx-Bkh"/>
                             <constraint firstItem="QpQ-H1-Pif" firstAttribute="top" secondItem="5h1-JI-4RZ" secondAttribute="bottom" constant="12" id="qNA-rR-uct"/>
                             <constraint firstItem="9kC-zz-bv5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="s55-Ig-uQC"/>
-                            <constraint firstAttribute="trailing" secondItem="9kC-zz-bv5" secondAttribute="trailing" id="vcL-x0-KGt"/>
+                            <constraint firstItem="9kC-zz-bv5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="xRY-Uv-WBI"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="containerView" destination="9kC-zz-bv5" id="ydl-C4-Eaq"/>
                         <outlet property="heightTableView" destination="WGD-8T-XHE" id="c2V-IG-L36"/>
+                        <outlet property="leftConstraint" destination="s55-Ig-uQC" id="Y1r-H5-N8j"/>
                         <outlet property="tableView" destination="QpQ-H1-Pif" id="M46-oV-3S9"/>
                     </connections>
                 </viewController>
@@ -145,26 +146,36 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Historical" translatesAutoresizingMaskIntoConstraints="NO" id="ErQ-F8-qZ1">
+                                <rect key="frame" x="0.0" y="94" width="375" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="K67-5b-WBO"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.30238124709999997" green="0.72986859959999995" blue="0.86205389259999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.76078485650000005" blue="0.28122286029999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="ILy-Jd-X9A" firstAttribute="top" secondItem="caY-29-TZ9" secondAttribute="bottom" constant="43" id="9f6-1W-nP3"/>
                             <constraint firstItem="2D1-Cf-R7b" firstAttribute="centerX" secondItem="ZIQ-DT-xSn" secondAttribute="centerX" id="HMu-LV-1st"/>
                             <constraint firstItem="ILy-Jd-X9A" firstAttribute="centerX" secondItem="caY-29-TZ9" secondAttribute="centerX" id="KCC-0d-Mh7"/>
+                            <constraint firstItem="ErQ-F8-qZ1" firstAttribute="centerX" secondItem="RCr-Dp-3I1" secondAttribute="centerX" id="MIR-15-0En"/>
                             <constraint firstItem="2D1-Cf-R7b" firstAttribute="top" secondItem="ZIQ-DT-xSn" secondAttribute="bottom" constant="34" id="WnM-EZ-wSw"/>
                             <constraint firstItem="ILy-Jd-X9A" firstAttribute="centerX" secondItem="ZIQ-DT-xSn" secondAttribute="centerX" id="aCc-7e-ITr"/>
                             <constraint firstItem="ILy-Jd-X9A" firstAttribute="centerY" secondItem="RCr-Dp-3I1" secondAttribute="centerY" id="dA0-Gn-Jra"/>
+                            <constraint firstItem="ErQ-F8-qZ1" firstAttribute="top" secondItem="WSf-Rj-hrq" secondAttribute="bottom" constant="30" id="eWg-zT-eOd"/>
                             <constraint firstItem="ILy-Jd-X9A" firstAttribute="centerX" secondItem="RCr-Dp-3I1" secondAttribute="centerX" id="gUO-iw-PtJ"/>
                             <constraint firstItem="ZIQ-DT-xSn" firstAttribute="top" secondItem="ILy-Jd-X9A" secondAttribute="bottom" constant="43" id="gr7-C7-FyU"/>
+                            <constraint firstItem="ErQ-F8-qZ1" firstAttribute="width" secondItem="RCr-Dp-3I1" secondAttribute="width" id="n5H-YB-0wd"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="0fk-iJ-TZV"/>
                     <connections>
                         <outlet property="showLabel" destination="2D1-Cf-R7b" id="uwC-pa-Wrn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="quv-le-FES" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="865" y="139"/>
+            <point key="canvasLocation" x="1804" y="138.98050974512745"/>
         </scene>
         <!--Blue View Controller-->
         <scene sceneID="3xn-MV-vYL">
@@ -203,13 +214,14 @@
                             <constraint firstItem="VWG-rv-2LM" firstAttribute="top" secondItem="X2q-jf-O2O" secondAttribute="bottom" constant="64" id="pD9-dr-vvO"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="dx2-sz-RxF"/>
                     <connections>
                         <outlet property="meLabel" destination="VWG-rv-2LM" id="I1o-II-Nqs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sKb-Mm-Rex" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="800.14992503748135"/>
+            <point key="canvasLocation" x="1076" y="800.14992503748135"/>
         </scene>
         <!--Green View Controller-->
         <scene sceneID="ceL-yj-qOo">
@@ -247,13 +259,71 @@
                             <constraint firstItem="dSz-4q-jQh" firstAttribute="centerX" secondItem="Y1A-Vl-sbJ" secondAttribute="centerX" id="u6N-p1-bLj"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="pZI-UK-Dm3"/>
                     <connections>
                         <outlet property="showLabel" destination="Y1A-Vl-sbJ" id="IAS-FJ-V90"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NK7-bh-XWh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="865" y="801"/>
+            <point key="canvasLocation" x="2743.1999999999998" y="800.14992503748135"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="a32-6E-EWc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="T64-nT-EFs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="beD-Nx-sg4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="JXb-Di-xqy" kind="relationship" relationship="rootViewController" id="vWf-NA-H8p"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xIN-yo-yD7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="864.79999999999995" y="138.98050974512745"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="uQo-1A-40q">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jlx-Ks-Jc2" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CmK-3X-lpH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="an1-Nf-wps" kind="relationship" relationship="rootViewController" id="ZNd-1T-IeB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xNi-Ky-O3b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1804" y="800.14992503748135"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7To-0J-Q5U">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JHS-Se-dz6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3ti-Lr-CbO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Mfq-uB-nbS" kind="relationship" relationship="rootViewController" id="R7J-7r-cZe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rta-ia-Vcz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="800.14992503748135"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Historical" width="50" height="50"/>
+    </resources>
 </document>
